# agency-cli-tools

./: .gitignore  AGENTCY_PROGRESS.md  AGENTCY_RECAP.md  AGENTCY_STACK.md  CLAUDE.md  Makefile  README.md  pyproject.toml
compass/: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GATEWAY.md  README.md  ROADMAP.md  SIGNAL_STRATEGY.md  docker-compose.yml  pyproject.toml
compass/brands/_template/: brand.yml  rubric.yml
compass/brands/_template/assets/: .gitkeep
compass/brands/_template/references/: competitors.md  voice-guide.md
compass/docs/: brief-v1-echo-handoff-proof.md  cli-surface-proof-2026-04-12.md  ownership-scorecard-2026-04-12.md  packaged-install-help-proof-2026-04-12.md  rename-blocker-profile-2026-04-12.md  runtime-prefix-inventory-2026-04-12.md
compass/src/brand_os/: __init__.py  cli.py  cli_utils.py  loop.py  loop_cli.py
compass/src/brand_os/actions/: __init__.py  notify.py  write.py
compass/src/brand_os/adapters/: brandos.py  persona.py  social.py
compass/src/brand_os/agents/: __init__.py  base.py  market.py  threat.py
compass/src/brand_os/core/: brands.py  decision.py  learning.py  llm.py  policy.py
compass/src/brand_os/eval/: __init__.py  cli.py  grader.py  heal.py  learnings.py
compass/src/brand_os/intel/: __init__.py  cli.py  hooks.py  pipeline.py
compass/src/brand_os/intel/scrapers/: __init__.py  apify.py  web.py
compass/src/brand_os/monitor/: __init__.py  cli.py  emailer.py  reports.py
compass/src/brand_os/persona/: __init__.py  bootstrap.py  chat.py  cli.py  crud.py  drift.py  enrichment.py  exporters.py  learning.py  optimization.py  storage.py
compass/src/brand_os/plan/: __init__.py  brief_v1.py  cli.py  store.py
compass/src/brand_os/plan/plugins/: __init__.py  seo.py  social.py
compass/src/brand_os/plan/stages/: __init__.py  activation.py  creative.py  research.py  strategy.py
compass/src/brand_os/produce/: __init__.py  cli.py  copy.py  queue.py
compass/src/brand_os/produce/image/: __init__.py  generate.py
compass/src/brand_os/produce/image/providers/: gemini.py  reve.py
compass/src/brand_os/produce/video/: __init__.py  generate.py
compass/src/brand_os/publish/: __init__.py  cli.py  queue.py  rate_limit.py
compass/src/brand_os/server/: __init__.py  api.py  mcp.py
compass/src/brand_os/signals/: __init__.py  cli.py  history.py  relevance.py  schema.py
compass/src/brand_os/signals/providers/: __init__.py  file.py  google_news.py  web.py
compass/src/brand_os/signals/sources/: __init__.py  reddit.py  reddit_discover.py  rss.py
compass/src/brand_os/workflows/: __init__.py  approval.py
compass/tests/core/: test_approval_workflow.py  test_cli_surface_compat.py  test_json_contract.py  test_llm_provider.py  test_loop_execution.py  test_optional_surfaces.py  test_runtime_prefix_compat.py
compass/tests/plan/: test_brief_v1.py  test_stage_normalization.py
docs/: AGENTCY_PROGRESS.md  AGENTCY_RECAP.md  AGENTCY_STACK.md  CONSOLIDATION.md  _solutions.md  agentcy-compass-boundary-drift-review-2026-04-14.md  agentcy-echo-compatibility-drift-review-2026-04-14.md  (+22 more)
echo/: .gitignore  CLAUDE.md  CODEMAP.md  README.md  pyproject.toml
echo/.github/workflows/: docker-image.yml
echo/app/: brief_v1.py  cli.py  forecast_v1.py  run_eval.py  smoke_mode.py
echo/app/services/: graph_interview.py  graph_models.py  graph_retrieval.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  report_language.py  report_logger.py  simulation_config_generator.py  simulation_runner.py
echo/app/tools/: run_simulation.py
echo/app/utils/: file_parser.py  llm_client.py  oasis_llm.py
echo/docs/: app-import-root-options-2026-04-12.md  forecast-v1-deferral-scorecard.md  package-import-bin-inventory-2026-04-12.md  packaged-compatibility-proof-boundary-2026-04-12.md  prd-agent-first-cli.md  rename-readiness-scorecard-2026-04-12.md
echo/scripts/: action_trace.py  base_simulation_runner.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py
echo/tests/: test_cli_artifacts_and_visuals.py  test_file_parser.py  test_llm_client.py  test_public_surface_contract.py  test_report_agent_tool_calls.py  test_report_language.py  test_run_eval_artifacts.py  test_simulation_config_generator.py  test_simulation_runner_cli_mode.py  test_simulation_runner_io.py  test_simulation_runner_state.py  test_simulation_runtime_preflight.py  test_simulation_support.py  test_smoke_mode.py
loom/: CLAUDE.md  (+1 more)
protocols/: __init__.py  pyproject.toml  run_result-to-performance-v1-adapter.md
protocols/adapters/: __init__.py  run_result_to_performance_v1.py
protocols/src/agentcy_protocols/: __init__.py  adapters.py  utils.py
protocols/tests/: test_brief_to_forecast_v1.py  test_brief_to_run_result_v1.py  test_canonical_writer_module_references.py  test_forecast_v1_protocol.py  test_performance_v1_protocol.py  test_run_result_to_performance_adapter.py  test_run_result_to_performance_v1.py  test_run_result_to_performance_v1_adapter.py  test_run_result_v1_protocol.py  test_voice_pack_to_brief_v1.py
pulse/: .gitignore  README.md  pyproject.toml
pulse/.github/workflows/: smoke.yml
pulse/lab/: .gitignore  CLAUDE.md  README.md  pyproject.toml
pulse/lab/.github/workflows/: smoke.yml
pulse/lab/src/agentcy_lab/: __init__.py  calibration.py  cli.py
pulse/lab/tests/: test_calibration.py  test_cli.py
pulse/src/agentcy_pulse/: adapter.py  calibration.py  cli.py  synthetic_analysis.py
pulse/tests/: test_cli.py  test_seam.py  test_study.py
vox/: .gitignore  AGENTS.md  CLAUDE.md  CODEMAP.md  README.md  cli-prsna-wave.md  pyproject.toml
vox/docs/: package-cli-alias-readiness-2026-04-12.md  packaged-install-help-proof-2026-04-12.md  voice-pack-v1-scorecard.md
vox/personas/: scientist.yaml
vox/src/prsna/: __init__.py  bootstrap.py  cli.py  drift.py  eval_cases.py  learning.py  llm.py  persona.py  utils.py
vox/src/prsna/enrichment/: __init__.py  exa.py
vox/src/prsna/exporters/: __init__.py
vox/src/prsna/optimization/: __init__.py  optimize.py
vox/tests/: test_eval_workflow.py  test_exporters.py  test_persona.py
(+16 files in other folders)
