[project]
name = "agentcy"
version = "0.1.0"
description = "Agentcy — single CLI entry point for the agent suite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "agentcy-protocols",
    "agentcy-compass",
    "agentcy-echo",
    "agentcy-pulse",
    "agentcy-vox",
]

[project.optional-dependencies]
echo-simulation = [
    "agentcy-echo[simulation]",
]
compass-all = [
    "agentcy-compass[all]",
]
full-python = [
    "agentcy-compass[all]",
    "agentcy-echo[simulation]",
]

[project.scripts]
agentcy = "agentcy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcy"]

[tool.uv.workspace]
members = [".", "protocols", "compass", "echo", "pulse", "vox"]

[tool.uv.sources]
agentcy-protocols = { workspace = true }
agentcy-compass  = { workspace = true }
agentcy-echo     = { workspace = true }
agentcy-pulse    = { workspace = true }
agentcy-vox      = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
