[project]
name = "agentcy-compass"
version = "0.1.0"
description = "Brand ops — signals, planning, production, and autonomous loop"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ali Madad", email = "ali@scty.org"},
]

dependencies = [
    "agentcy-protocols",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
gemini = [
    "google-genai>=1.0",
]
openai = [
    "litellm>=1.40",
]
persona = [
    "litellm>=1.40",
    "exa-py>=1.0",
]
optimize = [
    "dspy>=2.5",
]
intel = [
    "apify-client>=1.7",
    "beautifulsoup4>=4.12",
]
video = [
    "replicate>=1.0",
    "cartesia>=2.2",
]
image = [
    "google-genai>=1.0",
]
publish = [
    "tweepy>=4.14",
]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]
email = [
    "resend>=2.0",
]
workflows = [
    "python-statemachine>=2.0",
    "aiosqlite>=0.20",
]
notifications = [
    "slack-sdk>=3.27",
]
agents = [
    "pydantic-ai>=0.0.24",
]
predict = [
    "statsforecast>=1.7",
    "pyod>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
all = [
    "agentcy-compass[gemini,openai,intel,video,publish,server,email,workflows,notifications,agents,predict]",
]

[project.scripts]
agentcy-compass = "brand_os.cli:app"

[tool.uv.sources]
agentcy-protocols = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.claude",
    "/.codex",
    "/.openclaw",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.venv",
    "/dist",
]

[tool.hatch.build.targets.wheel]
packages = ["src/brand_os"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
