[project]
name = "agentcy-echo"
version = "0.1.0"
description = "Swarm intelligence prediction — documents + requirement → simulated social forecast"
# camel-oasis simulation runtime requires <3.13
requires-python = ">=3.11,<3.13"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Ali Madad", email = "ali@scty.org" }
]

dependencies = [
    "agentcy-protocols",
    "openai>=1.0.0",
    "PyMuPDF>=1.24.0",
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# camel-oasis pinned — do not upgrade; breaks simulation pipeline
simulation = [
    "camel-oasis @ https://files.pythonhosted.org/packages/77/d0/6d62173602433937d0228b7809e2b244e09c11cfb1be9c6754ae3b20d887/camel_oasis-0.2.5-py3-none-any.whl",
    "camel-ai==0.2.78",
]

[project.scripts]
agentcy-echo = "app.cli:main"

[tool.uv.sources]
agentcy-protocols = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
