[project]
name = "agentcy-protocols"
version = "0.1.0"
description = "Shared schemas and adapters for the agentcy suite"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcy_protocols"]

[tool.hatch.build.targets.wheel.sources]
"schemas" = "agentcy_protocols/schemas"
