[project]
name = "agentcy-pulse"
version = "0.1.0"
description = "Measurement and calibration — run_result.v1 → performance.v1, forecast vs performance calibration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentcy-protocols",
    "jsonschema>=4.0",
]

[project.scripts]
agentcy-pulse = "agentcy_pulse.cli:main"

[tool.uv.sources]
agentcy-protocols = { workspace = true }

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcy_pulse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
