[project]
name = "agentcy-vox"
version = "0.1.0"
description = "Persona management — create, test, optimize, drift-detect, and export AI personas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentcy-protocols",
    "typer>=0.12",
    "rich>=13.0",
    "dspy>=2.5",
    "litellm>=1.40",
    "exa-py>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
optimize = [
    "gepa",
]
minimax = [
    "httpx>=0.27",
]

[project.scripts]
agentcy-vox = "prsna.cli:app"

[tool.uv.sources]
agentcy-protocols = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/.claude",
    "/.codex",
    "/.openclaw",
    "/.git",
    "/.venv",
    "/dist",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/pyproject.toml",
    "/uv.lock",
    "/CLAUDE.md",
    "/AGENTS.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prsna"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
