[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "agentcy-lab"
version = "0.1.0"
description = "Minimal agentcy-lab birth slice for forecast.v1 -> performance.v1 calibration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.4.0",
]

[project.scripts]
agentcy-lab = "agentcy_lab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcy_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
